--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     ],
     "require": {
         "php":              "~7.0",
-        "psr/http-message": "^1.0"
+        "psr/http-message": "^1.0",
+        "lcobucci/jwt":     "^3.0"
     }
 }
