--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php":              "~7.0",
         "psr/http-message": "^1.0",
-        "lcobucci/jwt":     "^3.0"
+        "lcobucci/jwt":     "^3.0",
+        "zendframework/zend-stratigility": "^1.1"
     }
 }
