--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,14 @@
         "php":              "~7.0",
         "psr/http-message": "^1.0",
         "lcobucci/jwt":     "^3.0",
-        "zendframework/zend-stratigility": "^1.1"
+        "zendframework/zend-stratigility": "^1.1",
+        "zendframework/zend-expressive": "^0.3.0",
+        "aura/router": "^2.3",
+        "zendframework/zend-servicemanager": "^2.6"
+    },
+    "autoload": {
+	    "psr-0": {
+	       "StoragelessSession\\": "src/"
+	    }
     }
 }
