--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "aura/router": "^2.3",
         "zendframework/zend-servicemanager": "^2.6"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.0"
+    }
     "autoload": {
 	    "psr-0": {
 	       "StoragelessSession\\": "src/"
