--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "zendframework/zend-stratigility": "^1.1",
         "zendframework/zend-expressive": "^0.3.0",
         "aura/router": "^2.3",
-        "zendframework/zend-servicemanager": "^2.6"
+        "zendframework/zend-servicemanager": "^2.6",
+        "dflydev/fig-cookies": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.0"
