Requiring diactoros for testing

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "dflydev/fig-cookies":             "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.0"
+        "phpunit/phpunit":              "^5.0",
+        "zendframework/zend-diactoros": "^1.1"
     },
     "autoload": {
 	    "psr-4": {
