--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,17 @@
         {
             "name":     "Marco Pivetta",
             "email":    "ocramius@gmail.com",
-            "homepage": "http://ocramius.github.io/"
+            "homepage": "http://ocramius.github.io/",
+            "role":     "Developer"
+        },
+        {
+            "name":  "Jefersson Nathan",
+            "email": "malukenho@phpse.net"
+        },
+        {
+            "name":  "Luís Otávio Cobucci Oblonczyk",
+            "email": "lcobucci@gmail.com",
+            "role":  "Developer"
         }
     ],
     "require": {
