`master` is now to be considered `2.0.x-dev`

--- a/composer.json
+++ b/composer.json
@@ -38,5 +38,10 @@
         "psr-4": {
             "PSR7SessionTest\\": "test/PSR7SessionTest"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "2.0.x-dev"
+        }
     }
 }
