scrutinizer: phpcs command experimenting

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,3 +1,8 @@
+build:
+    environment:
+        php:
+            version: 7.0
+
 before_commands:
     - "composer update --prefer-source"
 
@@ -7,7 +12,7 @@ tools:
         test_command: ./vendor/bin/phpunit
     php_code_sniffer:
         enabled: true
-        command: ./vendor/bin/phpcs
+        command: composer update && vendor/bin/phpcs
         config:
             standard: PSR2
         filter:
