--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,9 +2,10 @@ before_commands:
     - "composer update --prefer-source"
 
 tools:
+    external_code_coverage:
+        timeout: 1800
     php_code_coverage:
         enabled: true
-        test_command: ./vendor/bin/phpunit
     php_code_sniffer:
         enabled: false
     php_cpd:
