--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - composer update --prefer-source
 
 script:
-  - ./vendor/bin/phpunit
+  - ./vendor/bin/phpunit --disallow-test-output --report-useless-tests --coverage-clover ./clover.xml
 
 matrix:
   allow_failures:
