Uploading coverage report via clover.xml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,7 @@ script:
 matrix:
   allow_failures:
     - php: hhvm
+
+after_script:
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover ./clover.xml
