--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "psr/http-message":                "^1.0",
         "lcobucci/jwt":                    "^3.1",
         "zendframework/zend-stratigility": "^1.1",
-        "dflydev/fig-cookies":             "^1.0"
+        "dflydev/fig-cookies":             "^1.0",
+        "ramsey/uuid":                     "^3.2"
     },
     "require-dev": {
         "phpunit/phpunit":              "^5.0",
