--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
         }
     ],
     "require": {
-        "php":                             "~7.0",
-        "psr/http-message":                "^1.0",
-        "lcobucci/jwt":                    "^3.2",
-        "zendframework/zend-stratigility": "^2.0",
-        "dflydev/fig-cookies":             "^1.0"
+        "php":                          "~7.0",
+        "psr/http-message":             "^1.0",
+        "lcobucci/jwt":                 "^3.2",
+        "dflydev/fig-cookies":          "^1.0",
+        "http-interop/http-middleware": "^0.4.1"
     },
     "require-dev": {
-        "phpunit/phpunit":              "^6.0",
+        "phpunit/phpunit":              "^5.0",
         "zendframework/zend-diactoros": "^1.1",
         "humbug/humbug":                "dev-master"
     },
