--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "psr/http-message":                "^1.0",
         "lcobucci/jwt":                    "^3.1",
         "zendframework/zend-stratigility": "^1.1",
-        "dflydev/fig-cookies":             "^1.0"
+        "dflydev/fig-cookies":             "^1.0",
+        "lcobucci/clock":                  "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit":              "^5.0",
