--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_script:
   - composer update --prefer-source --ignore-platform-reqs
 
 script:
-  - ./vendor/bin/phpunit --disallow-test-output --report-useless-tests --coverage-clover ./clover.xml
+  - ./vendor/bin/phpunit --coverage-clover ./clover.xml
   - if php -i |grep -qE xdebug; then ./vendor/bin/humbug; fi
 
 after_script:
