--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,15 +1,11 @@
 <?xml version="1.0"?>
-<phpunit
-    bootstrap="./vendor/autoload.php"
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
     colors="true"
-    convertErrorsToExceptions="true"
-    convertNoticesToExceptions="true"
-    convertWarningsToExceptions="true"
     verbose="true"
-    stopOnFailure="false"
-    processIsolation="false"
     backupGlobals="false"
-    syntaxCheck="true"
+    beStrictAboutOutputDuringTests="true"
+    beStrictAboutTestsThatDoNotTestAnything="true"
 >
     <testsuite name="PSR7Session tests">
         <directory>./test/StoragelessTest</directory>
