--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,6 +1,11 @@
 before_commands:
     - "composer update --prefer-source"
 
+build:
+    environment:
+        php:
+            version: 7.1.0
+
 tools:
     external_code_coverage:
         timeout: 1800
