--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
 language: php
+sudo: false
 
 php:
-  - 7
   - 7.1
+  - nightly
+
+cache:
+  directories:
+    - $HOME/.composer/cache
 
 before_script:
+  - if [[ $TRAVIS_PHP_VERSION = '7.1' ]]; then PHPUNIT_FLAGS="--coverage-clover ./clover.xml"; else PHPUNIT_FLAGS=""; fi
   - composer update --prefer-source --ignore-platform-reqs
 
 script:
-  - ./vendor/bin/phpunit --coverage-clover ./clover.xml
+  - ./vendor/bin/phpunit $PHPUNIT_FLAGS
   - if php -i |grep -qE xdebug; then ./vendor/bin/humbug; fi
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover ./clover.xml
+  - if [ -f clover.xml ]; then php ocular.phar code-coverage:upload --format=php-clover ./clover.xml; fi
