--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php":                             "~7.0",
+        "php":                             "^7.1",
         "psr/http-message":                "^1.0",
         "lcobucci/jwt":                    "^3.1",
         "zendframework/zend-stratigility": "^1.1",
