--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "require-dev": {
         "phpunit/phpunit":              "^5.0",
         "zendframework/zend-diactoros": "^1.1",
-        "humbug/humbug":                "dev-master"
+        "humbug/humbug":                "~1.0@dev"
     },
     "replace": {
         "ocramius/psr7-session": "self.version"
