--- a/composer.json
+++ b/composer.json
@@ -24,14 +24,14 @@
         "php":                             "^7.1",
         "psr/http-message":                "^1.0",
         "lcobucci/jwt":                    "^3.1",
-        "zendframework/zend-stratigility": "^1.1",
+        "zendframework/zend-stratigility": "^1.1 || ^2.0",
         "dflydev/fig-cookies":             "^1.0",
         "lcobucci/clock":                  "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit":              "^5.0",
         "zendframework/zend-diactoros": "^1.1",
-        "humbug/humbug":                "dev-master"
+        "humbug/humbug":                "1.0.0-alpha2"
     },
     "replace": {
         "ocramius/psr7-session": "self.version"
