--- a/composer.json
+++ b/composer.json
@@ -22,16 +22,17 @@
     ],
     "require": {
         "php":                             "^7.1",
-        "psr/http-message":                "^1.0",
-        "lcobucci/jwt":                    "^3.1",
+        "psr/http-message":                "^1.0.1",
+        "psr/http-server-handler":         "^1.0.0",
+        "lcobucci/jwt":                    "^3.2.1",
         "zendframework/zend-stratigility": "^1.1",
-        "dflydev/fig-cookies":             "^1.0",
-        "lcobucci/clock":                  "^1.0"
+        "dflydev/fig-cookies":             "^1.0.2",
+        "lcobucci/clock":                  "^1.1.0"
     },
     "require-dev": {
-        "phpunit/phpunit":              "^5.0",
-        "zendframework/zend-diactoros": "^1.1",
-        "humbug/humbug":                "dev-master"
+        "phpunit/phpunit":              "^6.5.5",
+        "zendframework/zend-diactoros": "^1.7.0",
+        "humbug/humbug":                "^1.0.0-rc.0"
     },
     "replace": {
         "ocramius/psr7-session": "self.version"
