--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "php":                             "^7.1",
         "psr/http-message":                "^1.0.1",
         "psr/http-server-handler":         "^1.0.0",
+        "psr/http-server-middleware":      "^1.0.0",
         "lcobucci/jwt":                    "^3.2.1",
         "zendframework/zend-stratigility": "^1.1",
         "dflydev/fig-cookies":             "^1.0.2",
