--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_script:
 
 script:
   - ./vendor/bin/phpunit $PHPUNIT_FLAGS
+  - php examples/index.php > /dev/null
   - if php -i |grep -qE xdebug; then ./vendor/bin/humbug; fi
 
 after_script:
