--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,9 @@
         "lcobucci/clock":                  "^1.1.0"
     },
     "require-dev": {
-        "phpunit/phpunit":              "^6.5.5",
+        "phpunit/phpunit":              "^7.3.0",
         "zendframework/zend-diactoros": "^1.7.0",
-        "humbug/humbug":                "^1.0.0-rc.0"
+        "infection/infection":          "^0.9.2"
     },
     "replace": {
         "ocramius/psr7-session": "self.version"
