--- a/infection.json.dist
+++ b/infection.json.dist
@@ -6,7 +6,6 @@
     },
     "timeout": 10,
     "logs": {
-        "text": "humbuglog.txt",
-        "json": "humbuglog.json"
+        "text": "infectionlog.txt"
     }
 }
