--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
     "require-dev": {
         "phpunit/phpunit":              "^7.3.0",
         "zendframework/zend-diactoros": "^1.8.4",
-        "infection/infection":          "^0.9.2"
+        "infection/infection":          "^0.9.2",
+        "phpstan/phpstan":              "^0.10.2"
     },
     "replace": {
         "ocramius/psr7-session": "self.version"
