--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_script:
   - composer update --prefer-source --ignore-platform-reqs
 
 script:
+  - ./vendor/bin/phpstan analyse
   - ./vendor/bin/phpunit $PHPUNIT_FLAGS
   - php examples/index.php > /dev/null
   - if php -i |grep -qE xdebug; then ./vendor/bin/infection; fi
