--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
         "phpunit/phpunit":              "^7.3.0",
         "zendframework/zend-diactoros": "^1.8.4",
         "infection/infection":          "^0.9.2",
-        "phpstan/phpstan":              "^0.10.2"
+        "phpstan/phpstan":              "^0.10.2",
+        "phpstan/phpstan-phpunit":      "^0.10"
     },
     "replace": {
         "ocramius/psr7-session": "self.version"
