--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "zendframework/zend-diactoros": "^1.8.4",
         "infection/infection":          "^0.9.2",
         "phpstan/phpstan":              "^0.10.2",
-        "phpstan/phpstan-phpunit":      "^0.10"
+        "phpstan/phpstan-phpunit":      "^0.10",
+        "phpstan/phpstan-strict-rules": "^0.10.1"
     },
     "replace": {
         "ocramius/psr7-session": "self.version"
