--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,9 @@
         "infection/infection":          "^0.9.2",
         "phpstan/phpstan":              "^0.10.2",
         "phpstan/phpstan-phpunit":      "^0.10",
-        "phpstan/phpstan-strict-rules": "^0.10.1"
+        "phpstan/phpstan-strict-rules": "^0.10.1",
+        "squizlabs/php_codesniffer":    "^3.3.1",
+        "doctrine/coding-standard":     "^4.0.0"
     },
     "replace": {
         "ocramius/psr7-session": "self.version"
