--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
   - ./vendor/bin/phpunit $PHPUNIT_FLAGS
   - php examples/index.php > /dev/null
   - if php -i |grep -qE xdebug; then ./vendor/bin/infection; fi
+  - ./vendor/bin/phpcs
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
