--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ script:
   - ./vendor/bin/phpstan analyse
   - ./vendor/bin/phpunit $PHPUNIT_FLAGS
   - php examples/index.php > /dev/null
-  - if php -i |grep -qE xdebug; then ./vendor/bin/infection; fi
+  - if php -i |grep -qE xdebug; then ./vendor/bin/infection --log-verbosity=none --threads=4; fi
   - ./vendor/bin/phpcs
 
 after_script:
