--- a/infection.json.dist
+++ b/infection.json.dist
@@ -4,8 +4,12 @@
             "src"
         ]
     },
-    "timeout": 10,
     "logs": {
-        "text": "php://stderr"
-    }
+        "text": "php://stderr",
+        "badge": {
+            "branch": "master"
+        }
+    },
+    "minMsi": 100,
+    "minCoveredMsi": 100
 }
