--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "php":                             "^7.4.7",
         "ext-json":                        "*",
         "dflydev/fig-cookies":             "^2.0.3",
-        "lcobucci/jwt":                    "^4.0.0",
+        "lcobucci/jwt":                    "4.1.x-dev",
         "lcobucci/clock":                  "^2.0.0",
         "psr/http-message":                "^1.0.1",
         "psr/http-server-handler":         "^1.0.1",
