--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
         }
     ],
     "require": {
-        "php":                             "^7.4.7",
+        "php":                             "^7.4.7 || ~8.0.0",
         "ext-json":                        "*",
-        "dflydev/fig-cookies":             "^2.0.3",
-        "lcobucci/jwt":                    "4.1.x-dev",
+        "dflydev/fig-cookies":             "^3.0.0",
+        "lcobucci/jwt":                    "^4.1.0",
         "lcobucci/clock":                  "^2.0.0",
         "psr/http-message":                "^1.0.1",
         "psr/http-server-handler":         "^1.0.1",
