--- a/infection.json.dist
+++ b/infection.json.dist
@@ -13,7 +13,7 @@
     "mutators": {
         "@default": true,
         "global-ignoreSourceCodeByRegex": [
-            "assert\\(.+\\);"
+            "assert\\(\\$token instanceof UnencryptedToken\\);"
         ]
     },
     "minMsi": 100,
