--- a/.github/workflows/backwards-compatibility.yml
+++ b/.github/workflows/backwards-compatibility.yml
@@ -5,7 +5,7 @@ on:
   push:
 
 jobs:
-  coding-standards:
+  backwards-compatibility:
     name: "Check Backwards Compatibility"
 
     runs-on: ${{ matrix.operating-system }}
@@ -44,15 +44,15 @@ jobs:
 
       - name: "Install lowest dependencies"
         if: ${{ matrix.dependencies == 'lowest' }}
-        run: "composer update --prefer-lowest --no-interaction --no-progress --no-suggest"
+        run: "composer --working-dir=tools/ update --prefer-lowest --no-interaction --no-progress --no-suggest"
 
       - name: "Install highest dependencies"
         if: ${{ matrix.dependencies == 'highest' }}
-        run: "composer update --no-interaction --no-progress --no-suggest"
+        run: "composer --working-dir=tools/ update --no-interaction --no-progress --no-suggest"
 
       - name: "Install locked dependencies"
         if: ${{ matrix.dependencies == 'locked' }}
-        run: "composer install --no-interaction --no-progress --no-suggest"
+        run: "composer --working-dir=tools/ install --no-interaction --no-progress --no-suggest"
 
       - name: "Roave Backward Compatibility Check"
-        run: "vendor/bin/roave-backward-compatibility-check"
+        run: "tools/vendor/bin/roave-backward-compatibility-check"
