--- a/.github/workflows/mutation-tests.yml
+++ b/.github/workflows/mutation-tests.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           coverage: "pcov"
           php-version: "${{ matrix.php-version }}"
-          ini-values: memory_limit=-1
+          ini-values: memory_limit=-1, zend.assertions=1
           tools: composer:v1, cs2pr
 
       - name: "Cache dependencies"
