--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php":                             "^7.4.7 || ~8.0.0",
+        "php":                             "~8.0.0 || ~8.1.0",
         "ext-json":                        "*",
         "dflydev/fig-cookies":             "^3.0.0",
         "lcobucci/jwt":                    "^4.1.4",
@@ -32,11 +32,11 @@
     },
     "require-dev": {
         "doctrine/coding-standard":               "^9.0.0",
-        "roave/infection-static-analysis-plugin": "^1.10.0",
         "laminas/laminas-diactoros":              "^2.7.0",
         "laminas/laminas-httphandlerrunner":      "^2.0.1",
         "phpunit/phpunit":                        "^9.5.9",
         "psalm/plugin-phpunit":                   "^0.16.1",
+        "roave/infection-static-analysis-plugin": "^1.10.0",
         "squizlabs/php_codesniffer":              "^3.6.0",
         "vimeo/psalm":                            "^4.10.0"
     },
