--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -30,5 +30,7 @@ jobs:
         uses: laminas/laminas-continuous-integration-action@1.14.2
         env:
           "GITHUB_TOKEN": ${{ secrets.GITHUB_TOKEN }}
+          "INFECTION_DASHBOARD_API_KEY": ${{ secrets.INFECTION_DASHBOARD_API_KEY }}
+          "STRYKER_DASHBOARD_API_KEY": ${{ secrets.STRYKER_DASHBOARD_API_KEY }}
         with:
           job: ${{ matrix.job }}
