Allow auto-installation of phpcs rulesets

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,10 @@
         "vimeo/psalm":                            "^4.23.0"
     },
     "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "infection/extension-installer": false
+        },
         "sort-packages": true
     },
     "replace": {
