--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php":                             "~8.0.0 || ~8.1.0 || ~8.2.0",
+        "php":                             "~8.1.0 || ~8.2.0",
         "ext-json":                        "*",
         "dflydev/fig-cookies":             "^3.0.0",
         "lcobucci/jwt":                    "^4.2.1",
@@ -46,7 +46,7 @@
             "infection/extension-installer": false
         },
         "platform": {
-            "php": "8.0.99"
+            "php": "8.1.99"
         },
         "sort-packages": true
     },
