--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,12 @@
-/test export-ignore
-/tools export-ignore
-/examples export-ignore
-.gitattributes export-ignore
-.gitignore export-ignore
-.scrutinizer.yml export-ignore
-.travis.yml export-ignore
-phpunit.xml.dist
+/.github                export-ignore
+/test                   export-ignore
+/tools                  export-ignore
+/examples               export-ignore
+/.gitattributes         export-ignore
+/.gitignore             export-ignore
+/composer.lock          export-ignore
+/infection.json.dist    export-ignore
+/phpcs.xml.dist         export-ignore
+/psalm.xml              export-ignore
+/phpunit.xml.dist       export-ignore
+/renovate.json          export-ignore
