--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "php":                             "~8.1.0 || ~8.2.0",
         "ext-json":                        "*",
         "dflydev/fig-cookies":             "^3.0.0",
-        "lcobucci/jwt":                    "^4.3.0",
+        "lcobucci/jwt":                    "^4.3.0 || ^5.0.0",
         "lcobucci/clock":                  "^3.0.0",
         "psr/http-message":                "^1.0.1",
         "psr/http-server-handler":         "^1.0.1",
