--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -2,12 +2,10 @@
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
     colors="true"
-    verbose="true"
-    backupGlobals="false"
     beStrictAboutOutputDuringTests="true"
-    beStrictAboutTestsThatDoNotTestAnything="true"
+    cacheDirectory=".phpunit.cache"
 >
-  <coverage includeUncoveredFiles="true">
+  <coverage>
     <include>
       <directory suffix=".php">./src</directory>
     </include>
