--- a/.gitattributes
+++ b/.gitattributes
@@ -8,5 +8,6 @@
 /infection.json.dist    export-ignore
 /phpcs.xml.dist         export-ignore
 /psalm.xml              export-ignore
+/psalm-baseline.xml     export-ignore
 /phpunit.xml.dist       export-ignore
 /renovate.json          export-ignore
