--- a/composer.json
+++ b/composer.json
@@ -61,5 +61,6 @@
         "psr-4": {
             "PSR7SessionsTest\\Storageless\\": "test/StoragelessTest"
         }
-    }
+    },
+    "type": "library"
 }
